Working on room

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.todos_kohlway"
+        applicationId "com.example.semester_project"
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -47,7 +47,7 @@ android {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
@@ -55,13 +55,13 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation "androidx.navigation:navigation-compose:2.4.0-beta01"
-    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
+    implementation "com.squareup.okhttp3:okhttp:4.9.1"
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation "io.coil-kt:coil-compose:1.4.0"
-    implementation 'androidx.room:room-common:2.3.0'
-    kapt 'androidx.room:room-compiler:2.3.0'
-    implementation 'androidx.room:room-ktx:2.3.0'
+    implementation 'androidx.room:room-common:2.4.0-rc01'
+    kapt 'androidx.room:room-compiler:2.4.0-rc01'
+    implementation 'androidx.room:room-ktx:2.4.0-rc01'
     implementation "com.google.dagger:hilt-android:2.38.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
